Heatmaps of fieldset differences

--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -34,12 +34,12 @@
     "import xarray as xr\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from parcels import FieldSet, ParticleSet, JITParticle, AdvectionRK4, ErrorCode, plotTrajectoriesFile, ParticleFile\n",
+    "from parcels import FieldSet, ParticleSet, JITParticle, AdvectionRK4, ErrorCode, ParticleFile\n",
     "import scipy.spatial\n",
     "\n",
     "import utils\n",
     "from parcels_utils import get_file_info\n",
-    "from plot_utils import plot_trajectories"
+    "from plot_utils import plot_trajectories, get_carree_axis, get_carree_gl"
    ]
   },
   {
@@ -109,6 +109,7 @@
     "    lat = files[0][\"xrds\"][\"lat\"][i].values\n",
     "    lon = files[0][\"xrds\"][\"lon\"][j].values\n",
     "    lat_ind, lon_ind = get_nearest_index(files[1], lat, lon)\n",
+    "#     print(utils.haversine(lat, files[1][\"xrds\"][\"lat\"].values[lat_ind], lon, files[1][\"xrds\"][\"lon\"].values[lon_ind]))\n",
     "    if abs(lat - files[1][\"xrds\"][\"lat\"].values[lat_ind]) > 0.00903 or abs(lon - files[1][\"xrds\"][\"lon\"].values[lon_ind]) > 0.0107:\n",
     "        continue\n",
     "    v = files[0][\"xrds\"][\"v\"].values[t, i, j]\n",
@@ -144,6 +145,62 @@
    "outputs": [],
    "source": [
     "np.nanmean(mag_diff), np.nanmedian(mag_diff), np.nanmax(mag_diff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ang_means = np.nanmean(ang_diff, axis=0)\n",
+    "mag_means = np.nanmean(mag_diff, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(ang_diff[np.where(~np.isnan(ang_diff))].flatten())\n",
+    "plt.title(\"angle differences (degrees)\")\n",
+    "plt.show()\n",
+    "plt.hist(mag_diff[np.where(~np.isnan(mag_diff))].flatten())\n",
+    "plt.title(\"magnitude differences (m/s)\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lon, lat = np.meshgrid(files[0][\"xrds\"][\"lon\"].values, files[0][\"xrds\"][\"lat\"].values)\n",
+    "\n",
+    "dom = files[0][\"domain\"]\n",
+    "dom[\"S\"] = 32.3\n",
+    "ax = get_carree_axis(dom)\n",
+    "gl = get_carree_gl(ax)\n",
+    "plt.contourf(lon, lat, ang_means, np.linspace(0, 105, 30), cmap='inferno')\n",
+    "plt.title(\"Average vector degree differences\")\n",
+    "plt.colorbar()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = get_carree_axis(dom)\n",
+    "gl = get_carree_gl(ax)\n",
+    "plt.contourf(lon, lat, mag_means, np.linspace(0, 0.2, 20), cmap='inferno')\n",
+    "plt.title(\"Average magnitude differences (m/s)\")\n",
+    "plt.colorbar()\n",
+    "plt.show()"
    ]
   },
   {
