--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -110,7 +110,14 @@
     "def dataset_from_mat(grid_mat_path, current_mat_path, remove_land_currents):\n",
     "    grid_mat = scipy.io.loadmat(grid_mat_path)\n",
     "    current_mat = scipy.io.loadmat(current_mat_path)\n",
-    "    coords = grid_mat[\"totalGrid\"]\n",
+    "    if \"totalGrid\" in grid_mat:\n",
+    "        coords = grid_mat[\"totalGrid\"]\n",
+    "    else:\n",
+    "        gx = grid_mat[\"gx\"]\n",
+    "        gy = grid_mat[\"gy\"]\n",
+    "        coords = np.empty((gx.size, 2), dtype=np.float32)\n",
+    "        coords[:, 0] = gx.flatten()\n",
+    "        coords[:, 1] = gy.flatten()\n",
     "    u = current_mat[\"U\"]\n",
     "    v = current_mat[\"V\"]\n",
     "    time = np.array([parse_mat_time(current_mat[\"t\"][0, 0])])\n",
@@ -165,9 +172,10 @@
     "\n",
     "while current_time <= end_time:\n",
     "    date_parsed, time_parsed = parse_time(current_time)\n",
-    "    filename = utils.MATLAB_DIR / f\"Tot_SDLJ_{date_parsed}_{time_parsed}.mat\"\n",
+    "    filename = utils.MATLAB_DIR / \"tot_sdlj_gridnew\" / f\"Tot_SDLJ_{date_parsed}_{time_parsed}.mat\"\n",
     "    if filename.is_file():\n",
-    "        ds = dataset_from_mat(utils.MATLAB_DIR / \"codartotalGrid.mat\", filename, True)\n",
+    "#         ds = dataset_from_mat(utils.MATLAB_DIR / \"codartotalGrid.mat\", filename, True)\n",
+    "        ds = dataset_from_mat(utils.MATLAB_DIR / \"sdcodargrid_new.mat\", filename, True)\n",
     "        if ds_total is None:\n",
     "            ds_total = ds\n",
     "        else:\n",
@@ -183,28 +191,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fs = xr_dataset_to_fieldset(ds_total)\n",
+    "fs.U.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "date_parsed, _ = parse_time(start_time)\n",
     "ds_total.to_netcdf(f\"current_netcdfs/Tot_SDLJ_{date_parsed}.nc\")\n",
     "print(f\"saved to current_netcdfs/Tot_SDLJ_{date_parsed}.nc\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"saved to current_netcdfs/Tot_SDLJ_{date_parsed}.nc\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs = xr_dataset_to_fieldset(ds_total)\n",
-    "fs.U.show()"
    ]
   }
  ],
