Cleanup and some more commenting

--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# fieldset_compare\n",
     "\n",
-    "compare particle simulations in different fieldsets with a single particle"
+    "compare the vector fields of different fieldsets\n",
+    "\n",
+    "mainly used for checking the differences between the plume tracker OI data vs the thredds data"
    ]
   },
   {
@@ -201,146 +203,6 @@
     "plt.title(\"Average magnitude differences (m/s)\")\n",
     "plt.colorbar()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### simulation stuff\n",
-    "\n",
-    "i think this just spawns a single particle and make it do stuff\n",
-    "\n",
-    "i dont remember"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do_sim = True\n",
-    "\n",
-    "spawn_time = np.datetime64(\"2020-08-10T00:00:00\")\n",
-    "# end_time = files[0][\"timerng\"][1]\n",
-    "end_time = np.datetime64(\"2020-08-10T23:00:00\")\n",
-    "max_var = 0.003\n",
-    "\n",
-    "# (lat, lon)\n",
-    "# spawn_loc_base = np.array(\n",
-    "#     [32.551707, -117.138],\n",
-    "# )\n",
-    "\n",
-    "spawn_loc_base = utils.load_pts_mat(utils.MATLAB_DIR / \"pts_20200810_0030.mat\", \"yf\", \"xf\").T[1090:1100]\n",
-    "\n",
-    "# spawn_locs = add_noise(spawn_loc_base, max_var, repeat=20)\n",
-    "spawn_locs = spawn_loc_base\n",
-    "simulation_dt = timedelta(minutes=5)\n",
-    "out_dt = timedelta(hours=1)\n",
-    "save_dir = utils.create_path(utils.PARTICLE_NETCDF_DIR / \"testcompare\")\n",
-    "\n",
-    "def DeleteParticle(particle, fieldset, time):\n",
-    "    particle.delete()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "now i could just stuff everything into a single ParticleSet for every different spawn location\n",
-    "\n",
-    "but then it becomes annoying to filter out ones that start at a specific location"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "for f in files:\n",
-    "    f[\"psets\"] = np.empty(len(spawn_locs), dtype=ParticleSet)\n",
-    "    f[\"pfiles\"] = np.empty(len(spawn_locs), dtype=ParticleFile)\n",
-    "    \n",
-    "    for i in range(len(spawn_locs)):\n",
-    "        f[\"psets\"][i] = ParticleSet(fieldset=f[\"fs\"], pclass=JITParticle, lon=[spawn_locs[i][1]], lat=[spawn_locs[i][0]], time=[spawn_time])\n",
-    "        save_path = f\"{save_dir}/{f['name']}{i}.nc\"\n",
-    "        f[\"pfiles\"][i] = f[\"psets\"][i].ParticleFile(save_path, outputdt=out_dt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "if do_sim:\n",
-    "    for f in files:\n",
-    "        for i in range(len(spawn_locs)):\n",
-    "            f[\"psets\"][i].execute(\n",
-    "                        AdvectionRK4,\n",
-    "                        endtime=end_time,\n",
-    "                        dt=simulation_dt,\n",
-    "                        recovery={ErrorCode.ErrorOutOfBounds: DeleteParticle},\n",
-    "                        output_file=f[\"pfiles\"][i]\n",
-    "                    )\n",
-    "            f[\"pfiles\"][i].export()\n",
-    "            f[\"pfiles\"][i].close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "mod_domain = {\n",
-    "    \"S\": 32.41,\n",
-    "    \"N\": 32.7,\n",
-    "    \"W\": -117.25,\n",
-    "    \"E\": -117\n",
-    "}\n",
-    "# mod_domain = {\n",
-    "#     'S': 32.545,\n",
-    "#     'N': 32.585,\n",
-    "#     'W': -117.158,\n",
-    "#     'E': -117.13\n",
-    "# }\n",
-    "# mod_domain = {\n",
-    "#     'S': 32.5495,\n",
-    "#     'N': 32.555,\n",
-    "#     'W': -117.15,\n",
-    "#     'E': -117.135\n",
-    "# }\n",
-    "mod_domain = {\n",
-    "    'S': 32.49,\n",
-    "    'N': 32.55,\n",
-    "    'W': -117.2,\n",
-    "    'E': -117.05\n",
-    "}\n",
-    "\n",
-    "for i in range(len(spawn_locs)):\n",
-    "    ps = np.array([f[\"pfiles\"][i].name for f in files])\n",
-    "    print(f\"starting at (lat, lon) {spawn_locs[i]}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for f in files:\n",
-    "    ps = np.array([p.name for p in f[\"pfiles\"]])\n",
-    "    print(f\"paths for {f['name']}\")\n",
-    "    plot_trajectories(ps, mod_domain, legend=True, scatter=False)"
    ]
   }
  ],
