--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -127,6 +127,8 @@
     "    assert ir[\"timerng\"][0] <= target[\"timerng\"][0]\n",
     "    assert ir[\"timerng\"][1] >= target[\"timerng\"][1]\n",
     "assert target[\"res\"] == mask_nc[\"res\"]\n",
+    "# mask_nc should just be sliced before being used\n",
+    "# change these asserts to >= later when that's done\n",
     "assert mask_nc[\"lat\"][0] == targ_min[0]\n",
     "assert mask_nc[\"lon\"][0] == targ_min[1]\n",
     "assert mask_nc[\"lat\"][-1] == targ_max[0]\n",
