--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -35,6 +35,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "change settings accordingly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = np.datetime64(\"2020-08-01T01:00\", \"m\")\n",
+    "end_time = np.datetime64(\"2020-08-14T13:00\", \"m\")\n",
+    "incr = np.timedelta64(1, \"h\")\n",
+    "\n",
+    "# coord_grid_path = utils.MATLAB_DIR / \"sdcodargrid.mat\"\n",
+    "coord_grid_path = utils.MATLAB_DIR / \"sdcodargrid_new.mat\"\n",
+    "\n",
+    "mat_tot_dir = utils.MATLAB_DIR / \"tot_sdlj_gridnew\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -151,17 +174,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start_time = np.datetime64(\"2020-08-01T01:00\", \"m\")\n",
-    "end_time = np.datetime64(\"2020-08-14T13:00\", \"m\")\n",
-    "incr = np.timedelta64(1, \"h\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -172,10 +184,9 @@
     "\n",
     "while current_time <= end_time:\n",
     "    date_parsed, time_parsed = parse_time(current_time)\n",
-    "    filename = utils.MATLAB_DIR / \"tot_sdlj_gridnew\" / f\"Tot_SDLJ_{date_parsed}_{time_parsed}.mat\"\n",
+    "    filename = mat_tot_dir / f\"Tot_SDLJ_{date_parsed}_{time_parsed}.mat\"\n",
     "    if filename.is_file():\n",
-    "#         ds = dataset_from_mat(utils.MATLAB_DIR / \"codartotalGrid.mat\", filename, True)\n",
-    "        ds = dataset_from_mat(utils.MATLAB_DIR / \"sdcodargrid_new.mat\", filename, True)\n",
+    "        ds = dataset_from_mat(coord_grid_path, filename, True)\n",
     "        if ds_total is None:\n",
     "            ds_total = ds\n",
     "        else:\n",
@@ -191,6 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# display fieldset to see if data was loaded correctly\n",
     "fs = xr_dataset_to_fieldset(ds_total)\n",
     "fs.U.show()"
    ]
