Download monthly data over a year

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -100,7 +100,40 @@
     "        return slice(np.datetime64(time_range[0]), np.datetime64(time_range[1]))\n",
     "    if len(time_range) == 3:\n",
     "        # step size is an integer in hours\n",
-    "        return slice(np.datetime64(time_range[0]), np.datetime64(time_range[1]), time_range[2])"
+    "        return slice(np.datetime64(time_range[0]), np.datetime64(time_range[1]), time_range[2])\n",
+    "    \n",
+    "\n",
+    "def get_regs_year(year, name, lat_rng, lon_rng):\n",
+    "    regions = []\n",
+    "    months = np.arange(str(year), str(year + 1), dtype=\"datetime64[M]\")\n",
+    "    for m in months:\n",
+    "        days = np.arange(m, m + np.timedelta64(1, \"M\"), dtype=\"datetime64[D]\")\n",
+    "        timerng = (np.datetime64(days[0], \"h\"), days[-1] + np.timedelta64(23, \"h\"))\n",
+    "        reg1 = (f\"{name}_{m}\", utils.DATA_1KM, timerng, lat_rng, lon_rng, False)\n",
+    "        reg2 = (f\"{name}_{m}\", utils.DATA_2KM, timerng, lat_rng, lon_rng, True)\n",
+    "        reg6 = (f\"{name}_{m}\", utils.DATA_6KM, timerng, lat_rng, lon_rng, True)\n",
+    "        regions.append(reg1)\n",
+    "        regions.append(reg2)\n",
+    "        regions.append(reg6)\n",
+    "    return regions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.datetime64(\"2005-12-31\") + np.timedelta64(23, \"h\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.arange('2005', '2006', dtype='datetime64[M]')"
    ]
   },
   {
@@ -131,9 +164,9 @@
    "source": [
     "region_data = [\n",
     "    (\"tj_sample\", utils.DATA_1KM, (\"2020-01-10T00\", \"2020-08-11T00\", 200), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
-    "    (\"tj_plume\", utils.DATA_1KM, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
-    "    (\"tj_plume\", utils.DATA_2KM, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
-    "    (\"tj_plume\", utils.DATA_6KM, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "#     (\"tj_plume\", utils.DATA_1KM, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
+    "#     (\"tj_plume\", utils.DATA_2KM, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "#     (\"tj_plume\", utils.DATA_6KM, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
     "#     (\"tijuana_river\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11), False),\n",
     "#     (\"tijuana_river\", DATA_2KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.524, 32.75), (-117.32, -117.09), False),\n",
     "#     (\"tijuana_river\", DATA_6KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
@@ -141,7 +174,10 @@
     "#     (\"tijuana_river_now\", DATA_1KM, get_latest_span(np.timedelta64(300, \"D\")), (32.528, 32.71), (-117.29, -117.11), False),\n",
     "#     (\"tijuana_river_now\", DATA_2KM, get_latest_span(np.timedelta64(300, \"D\")), (32.524, 32.75), (-117.32, -117.09), False),\n",
     "#     (\"tijuana_river_now\", DATA_6KM, (\"2019-09-28T21:00\", \"2020-07-24T20\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
-    "]"
+    "]\n",
+    "\n",
+    "for rd in get_regs_year(2020, \"tj_plume\", (32.11093, 32.73124), (-117.565, -116.9924)):\n",
+    "    region_data.append(rd)"
    ]
   },
   {
@@ -153,6 +189,9 @@
     "regions = []\n",
     "for rd in region_data:\n",
     "    new_reg = get_region(rd)\n",
+    "    if new_reg[\"time\"].start >= np.datetime64(\"now\", \"h\"):\n",
+    "        print(f\"data starting from time {new_reg['time'].start} is in the future\")\n",
+    "        continue\n",
     "    new_reg[\"dataset\"] = thredds_data[new_reg[\"category\"]].sel(\n",
     "        time=new_reg[\"time\"],\n",
     "        lat=slice(new_reg[\"lat\"][0], new_reg[\"lat\"][1]),\n",
