--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -51,9 +51,12 @@
    "outputs": [],
    "source": [
     "files = [\n",
-    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tj_plume_interped.nc\", 1, name=\"tj_plume\"),\n",
+    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tj_plume_2020-08_interped.nc\", 1, name=\"tj_plume\"),\n",
     "    get_file_info(utils.CURRENT_NETCDF_DIR / \"Tot_SDLJ_20200801.nc\", 1, name=\"tot_sdlj\"),\n",
-    "]"
+    "]\n",
+    "\n",
+    "# if lat and lon dimensions are the same, the stuff will run MUCH quicker\n",
+    "dimensions_same = True"
    ]
   },
   {
@@ -101,34 +104,62 @@
     "ang_diff = np.full(files[0][\"xrds\"][\"u\"].shape, np.nan, dtype=np.float32)\n",
     "mag_diff = np.full(ang_diff.shape, np.nan, dtype=np.float32)\n",
     "\n",
-    "for t, i, j in np.ndindex(ang_diff.shape):\n",
-    "    time = files[0][\"xrds\"][\"time\"].values[t]\n",
-    "    u = files[0][\"xrds\"][\"u\"].values[t, i, j]\n",
-    "    if np.isnan(u) or time not in files[1][\"xrds\"][\"time\"]:\n",
-    "        continue\n",
-    "    # OI data is missing some time values\n",
-    "    t_other = np.where(files[1][\"xrds\"][\"time\"].values == time)[0][0]\n",
-    "    lat = files[0][\"xrds\"][\"lat\"][i].values\n",
-    "    lon = files[0][\"xrds\"][\"lon\"][j].values\n",
-    "    lat_ind, lon_ind = get_nearest_index(files[1], lat, lon)\n",
-    "#     print(utils.haversine(lat, files[1][\"xrds\"][\"lat\"].values[lat_ind], lon, files[1][\"xrds\"][\"lon\"].values[lon_ind]))\n",
-    "    if abs(lat - files[1][\"xrds\"][\"lat\"].values[lat_ind]) > 0.00903 or abs(lon - files[1][\"xrds\"][\"lon\"].values[lon_ind]) > 0.0107:\n",
-    "        continue\n",
-    "    v = files[0][\"xrds\"][\"v\"].values[t, i, j]\n",
-    "    u_other = files[1][\"xrds\"][\"u\"].values[t_other, lat_ind, lon_ind]\n",
-    "    v_other = files[1][\"xrds\"][\"v\"].values[t_other, lat_ind, lon_ind]\n",
-    "    mag = np.sqrt(u * u + v * v)\n",
-    "    mag_other = np.sqrt(u_other * u_other + v_other * v_other)\n",
-    "    dot_mag_rat = (u * u_other + v * v_other) / (mag * mag_other)\n",
-    "    # rounding errors cause arccos to go out of domain\n",
-    "    if dot_mag_rat > 1:\n",
-    "        ang = 0\n",
-    "    elif dot_mag_rat < -1:\n",
-    "        ang = 180\n",
-    "    else:\n",
+    "if not dimensions_same:\n",
+    "    for t, i, j in np.ndindex(ang_diff.shape):\n",
+    "        time = files[0][\"xrds\"][\"time\"].values[t]\n",
+    "        u = files[0][\"xrds\"][\"u\"].values[t, i, j]\n",
+    "        if np.isnan(u) or time not in files[1][\"xrds\"][\"time\"]:\n",
+    "            continue\n",
+    "        # OI data is missing some time values\n",
+    "        t_other = np.where(files[1][\"xrds\"][\"time\"].values == time)[0]\n",
+    "        if t_other.size == 0:\n",
+    "            continue\n",
+    "        else:\n",
+    "            t_other = t_other[0]\n",
+    "        lat = files[0][\"xrds\"][\"lat\"][i].values\n",
+    "        lon = files[0][\"xrds\"][\"lon\"][j].values\n",
+    "        lat_ind, lon_ind = get_nearest_index(files[1], lat, lon)\n",
+    "    #     print(utils.haversine(lat, files[1][\"xrds\"][\"lat\"].values[lat_ind], lon, files[1][\"xrds\"][\"lon\"].values[lon_ind]))\n",
+    "        if abs(lat - files[1][\"xrds\"][\"lat\"].values[lat_ind]) > 0.00903 or abs(lon - files[1][\"xrds\"][\"lon\"].values[lon_ind]) > 0.0107:\n",
+    "            continue\n",
+    "        v = files[0][\"xrds\"][\"v\"].values[t, i, j]\n",
+    "        u_other = files[1][\"xrds\"][\"u\"].values[t_other, lat_ind, lon_ind]\n",
+    "        v_other = files[1][\"xrds\"][\"v\"].values[t_other, lat_ind, lon_ind]\n",
+    "        mag = np.sqrt(u * u + v * v)\n",
+    "        mag_other = np.sqrt(u_other * u_other + v_other * v_other)\n",
+    "        dot_mag_rat = (u * u_other + v * v_other) / (mag * mag_other)\n",
+    "        # rounding errors cause arccos to go out of domain\n",
+    "        if dot_mag_rat > 1:\n",
+    "            ang = 0\n",
+    "        elif dot_mag_rat < -1:\n",
+    "            ang = 180\n",
+    "        else:\n",
+    "            ang = np.arccos(dot_mag_rat) * 180 / math.pi\n",
+    "        ang_diff[t, i, j] = ang\n",
+    "        mag_diff[t, i, j] = abs(mag - mag_other)\n",
+    "else:\n",
+    "    # runs mUCH MUCH quicker\n",
+    "    for t in range(ang_diff.shape[0]):\n",
+    "        time = files[0][\"xrds\"][\"time\"].values[t]\n",
+    "        u = files[0][\"xrds\"][\"u\"].values[t]\n",
+    "        v = files[0][\"xrds\"][\"v\"].values[t]\n",
+    "        t_other = np.where(files[1][\"xrds\"][\"time\"].values == time)[0]\n",
+    "        if t_other.size == 0:\n",
+    "            print(f\"time {time} missing\")\n",
+    "            continue\n",
+    "        else:\n",
+    "            t_other = t_other[0]\n",
+    "        u_other = files[1][\"xrds\"][\"u\"].values[t_other]\n",
+    "        v_other = files[1][\"xrds\"][\"v\"].values[t_other]\n",
+    "        mag = np.sqrt(u * u + v * v)\n",
+    "        mag_other = np.sqrt(u_other * u_other + v_other * v_other)\n",
+    "        dot_mag_rat = (u * u_other + v * v_other) / (mag * mag_other)\n",
+    "        # rounding errors cause arccos to go out of domain\n",
+    "        dot_mag_rat[np.where(dot_mag_rat > 1)] = 1\n",
+    "        dot_mag_rat[np.where(dot_mag_rat < -1)] = -1\n",
     "        ang = np.arccos(dot_mag_rat) * 180 / math.pi\n",
-    "    ang_diff[t, i, j] = ang\n",
-    "    mag_diff[t, i, j] = abs(mag - mag_other)"
+    "        ang_diff[t] = ang\n",
+    "        mag_diff[t] = abs(mag - mag_other)"
    ]
   },
   {
@@ -180,14 +211,17 @@
    "outputs": [],
    "source": [
     "lon, lat = np.meshgrid(files[0][\"xrds\"][\"lon\"].values, files[0][\"xrds\"][\"lat\"].values)\n",
+    "first_time = np.datetime64(files[0][\"timerng\"][0], \"M\")\n",
+    "deg_diff_dir = utils.create_path(utils.PICUTRE_DIR / \"fs_comp_angle\")\n",
     "\n",
     "dom = files[0][\"domain\"]\n",
     "dom[\"S\"] = 32.3\n",
     "ax = get_carree_axis(dom)\n",
     "gl = get_carree_gl(ax)\n",
-    "plt.contourf(lon, lat, ang_means, np.linspace(0, 105, 30), cmap='inferno')\n",
-    "plt.title(\"Average vector degree differences\")\n",
+    "plt.contourf(lon, lat, ang_means, np.linspace(0, np.nanmax(ang_means), 30), cmap='inferno')\n",
+    "plt.title(f\"Avg vector degree diff ({first_time})\")\n",
     "plt.colorbar()\n",
+    "plt.savefig(deg_diff_dir / f\"heat_deg_{first_time}\")\n",
     "plt.show()"
    ]
   },
@@ -197,11 +231,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "deg_diff_dir = utils.create_path(utils.PICUTRE_DIR / \"fs_comp_mag\")\n",
+    "\n",
     "ax = get_carree_axis(dom)\n",
     "gl = get_carree_gl(ax)\n",
-    "plt.contourf(lon, lat, mag_means, np.linspace(0, 0.2, 20), cmap='inferno')\n",
-    "plt.title(\"Average magnitude differences (m/s)\")\n",
+    "plt.contourf(lon, lat, mag_means, np.linspace(0, np.nanmax(mag_means), 20), cmap='inferno')\n",
+    "plt.title(f\"Avg magnitude diff (m/s) ({first_time})\")\n",
     "plt.colorbar()\n",
+    "plt.savefig(deg_diff_dir / f\"heat_mag_{first_time}\")\n",
     "plt.show()"
    ]
   }
