Add matlab code from original plume tracker

--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -54,7 +54,7 @@
     "# coord_grid_path = utils.MATLAB_DIR / \"sdcodargrid.mat\"\n",
     "coord_grid_path = utils.MATLAB_DIR / \"sdcodargrid_new.mat\"\n",
     "\n",
-    "mat_tot_dir = utils.MATLAB_DIR / \"tot_sdlj_gridnew\""
+    "mat_tot_dir = utils.MATLAB_DIR / \"support_data/TrackerOutput/hourly\""
    ]
   },
   {
