Quick plot of buoy trajectories, desparately need refactors

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -122,7 +122,7 @@
     "\n",
     "\n",
     "def DeleteParticle(particle, fieldset, time):\n",
-    "    print(\"Particle [%d] lost (%g %g %g %g)\" % (particle.id, particle.time, particle.depth, particle.lat, particle.lon))\n",
+    "    print(\"Particle [%d] lost (%g %g %g %g)\" % (particle.id, particle.time, particle.depth, particle.lat, particle.lon), file=sys.stderr)\n",
     "    particle.delete()\n",
     "\n",
     "\n",
