--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -66,8 +66,8 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    \"plume_track.json\",\n",
-    "    \"plume_track_totsdlj.json\",\n",
+    "    # \"plume_track.json\",\n",
+    "    # \"plume_track_totsdlj.json\",\n",
     "#     \"tijuana_interped.json\",\n",
     "#     \"tijuana_lin.json\",\n",
     "#     \"tijuana_lin_aggr.json\",\n",
@@ -75,6 +75,7 @@
     "#     \"tijuana_now.json\",\n",
     "#     \"tijuana_onerep.json\",\n",
     "#     \"tijuana_range.json\",\n",
+    "    \"buoy_track.json\"\n",
     "]\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
@@ -153,7 +154,7 @@
     "        dom = data[\"domain\"]\n",
     "    plot_particles_age(data[\"pset\"], dom, field=field,\n",
     "                       savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad)+\".png\",\n",
-    "                       vmax=days, field_vmax=max_v, part_size=1)\n",
+    "                       vmax=days, field_vmax=max_v, part_size=4)\n",
     "        \n",
     "        \n",
     "def parse_time_range(time_range, data):\n",
@@ -248,8 +249,8 @@
     "        sp_lat = cfg[\"spawn_points\"].T[0][np.random.randint(0, len(cfg[\"spawn_points\"]), total)]\n",
     "        sp_lon = cfg[\"spawn_points\"].T[1][np.random.randint(0, len(cfg[\"spawn_points\"]), total)]\n",
     "        # vary spawn locations using max_variation\n",
-    "        p_lats = add_noise(sp_lat, cfg[\"max_variation\"])\n",
-    "        p_lons = add_noise(sp_lon, cfg[\"max_variation\"])\n",
+    "        p_lats = utils.add_noise(sp_lat, cfg[\"max_variation\"])\n",
+    "        p_lons = utils.add_noise(sp_lon, cfg[\"max_variation\"])\n",
     "    else:\n",
     "        # cycle through each spawn point in order\n",
     "        sp_repeat = int(total / len(cfg[\"spawn_points\"]))\n",
@@ -326,7 +327,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -335,20 +337,22 @@
     "# execution of simulation\n",
     "for f in files:\n",
     "    cfg = f[\"cfg\"]\n",
+    "    if cfg[\"save_snapshots\"]:\n",
+    "        save_pset_plot(f, 0, ages=age)\n",
     "    for i in range(cfg[\"snap_num\"]):\n",
     "        exec_pset(f, cfg[\"snapshot_interval\"], cfg[\"simulation_dt\"])\n",
     "        if cfg[\"save_snapshots\"]:\n",
-    "            save_pset_plot(f, i, ages=age)\n",
+    "            save_pset_plot(f, i + 1, ages=age)\n",
     "\n",
     "    # save the second-to-last frame\n",
     "    if cfg[\"save_snapshots\"]:\n",
-    "        save_pset_plot(f, cfg[\"snap_num\"], ages=age)\n",
+    "        save_pset_plot(f, cfg[\"snap_num\"] + 1, ages=age)\n",
     "\n",
     "    # run the last interval (the remainder) if needed\n",
     "    if cfg[\"last_int\"] != 0:\n",
     "        exec_pset(f, cfg[\"snapshot_interval\"], cfg[\"simulation_dt\"])\n",
     "        if cfg[\"save_snapshots\"]:\n",
-    "            save_pset_plot(f, cfg[\"snap_num\"] + 1, ages=age)\n",
+    "            save_pset_plot(f, cfg[\"snap_num\"] + 2, ages=age)\n",
     "        \n",
     "    # run one more time with 0 runtime because for some reason\n",
     "    # particles can be out-of-bounds without being deleted\n",
@@ -411,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.10-final"
   }
  },
  "nbformat": 4,
