--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -280,6 +280,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f[\"pset\"].fieldset"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -415,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
