Run simulation based on buoy positions, more organization

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -237,6 +237,22 @@
     "    return ref[\"xrds\"][\"u\"].values[index], ref[\"xrds\"][\"v\"].values[index]\n",
     "\n",
     "\n",
+    "def get_nearest_index(latkd, lonkd, t, lat, lon):\n",
+    "    return t, latkd.query([lat])[1], lonkd.query([lon])[1]\n",
+    "\n",
+    "\n",
+    "def get_nearest_index_2(lat_arr, lon_arr, t, lat, lon):\n",
+    "    lat_diff = np.diff(lat_arr).mean()\n",
+    "    lon_diff = np.diff(lon_arr).mean()\n",
+    "    lat_idx = int(round((lat - lat_arr[0]) / lat_diff))\n",
+    "    lat_idx = max(0, lat_idx)\n",
+    "    lat_idx = min(len(lat_arr) - 1, lat_idx)\n",
+    "    lon_idx = int(round((lon - lon_arr[0]) / lon_diff))\n",
+    "    lon_idx = max(0, lon_idx)\n",
+    "    lon_idx = min(len(lon_arr) - 1, lon_idx)\n",
+    "    return t, lat_idx, lon_idx\n",
+    "\n",
+    "\n",
     "def get_current_interp(ref, t, lat, lon):\n",
     "    return ref[\"fs_flat\"].U[t, 0, lat, lon], ref[\"fs_flat\"].V[t, 0, lat, lon]\n",
     "\n",
