--- a/read_source_nc.ipynb
+++ b/read_source_nc.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the purpose of this notebook was to ensure the files from the thredds server were the same on the local storage"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
