More buoy testing, fix some simulation crashes

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -70,8 +70,8 @@
     "def get_region(data):\n",
     "    time_range = get_time_slice(data[2])\n",
     "    if data[5]:\n",
-    "        lat_range = utils.expand_coord_rng(data[3], thredds_data[data[1]][\"lat\"].values)\n",
-    "        lon_range = utils.expand_coord_rng(data[4], thredds_data[data[1]][\"lon\"].values)\n",
+    "        lat_range = utils.include_coord_range(data[3], thredds_data[data[1]][\"lat\"].values)\n",
+    "        lon_range = utils.include_coord_range(data[4], thredds_data[data[1]][\"lon\"].values)\n",
     "    else:\n",
     "        lat_range = data[3]\n",
     "        lon_range = data[4]\n",
