Add erddap forecast test, refactor trajectory plotting

--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "import utils\n",
     "from parcels_utils import get_file_info\n",
-    "from plot_utils import plot_trajectories, get_carree_axis, get_carree_gl"
+    "from plot_utils import get_carree_axis, get_carree_gl"
    ]
   },
   {
