--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -51,8 +51,8 @@
     "end_time = np.datetime64(\"2020-08-31T23:00\", \"m\")\n",
     "incr = np.timedelta64(1, \"h\")\n",
     "\n",
-    "# coord_grid_path = utils.MATLAB_DIR / \"sdcodargrid.mat\"\n",
-    "coord_grid_path = utils.MATLAB_DIR / \"sdcodargrid_new.mat\"\n",
+    "coord_grid_path = utils.MATLAB_DIR / \"sdcodargrid.mat\"\n",
+    "# coord_grid_path = utils.MATLAB_DIR / \"sdcodargrid_new.mat\"\n",
     "\n",
     "mat_tot_dir = utils.MATLAB_DIR / \"support_data/TrackerOutput/hourly\""
    ]
@@ -150,13 +150,13 @@
     "    v_grid = np.zeros((1, len(lats), len(lons)))\n",
     "    for i in range(len(lons)):\n",
     "        for j in range(len(lats)):\n",
-    "            if remove_land_currents and not np.isnan(u[0][i * len(lats) + j]) and coord_inland(coastline, lats[j], lons[i]):\n",
+    "            if remove_land_currents and not np.isnan(u[0, i * len(lats) + j]) and coord_inland(coastline, lats[j], lons[i]):\n",
     "                u_grid[0, j, i] = np.nan\n",
     "                v_grid[0, j, i] = np.nan\n",
     "            else:\n",
     "                # data from .mat is measured in cm/s\n",
-    "                u_grid[0, j, i] = u[0][i * len(lats) + j] / 100\n",
-    "                v_grid[0, j, i] = v[0][i * len(lats) + j] / 100\n",
+    "                u_grid[0, j, i] = u[0, i * len(lats) + j] / 100\n",
+    "                v_grid[0, j, i] = v[0, i * len(lats) + j] / 100\n",
     "    ds = xr.Dataset(\n",
     "        {\n",
     "            \"u\": ([\"time\", \"lat\", \"lon\"], u_grid),\n",
