Some touch-ups with the plotting

--- a/make_simulation_gif.ipynb
+++ b/make_simulation_gif.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "import utils\n",
     "from parcels_utils import buoycsv_to_particleds, clean_erddap_ds, HFRGrid, convert_lon_readings\n",
-    "from parcels_sim import simulation, simulation_buoy, generate_sim_gif\n",
+    "from parcels_sim import simulation, generate_sim_gif\n",
     "from plot_utils import generate_simulation_plots"
    ]
   },
