Make simulation stuff a bit more OOP

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "import utils\n",
     "from parcels_utils import get_file_info\n",
-    "from plot_utils import plot_particles_age\n",
+    "from plot_utils import draw_particles_age\n",
     "\n",
     "# ignore annoying deprecation warnings\n",
     "import warnings\n",
@@ -152,7 +152,7 @@
     "        dom = data[\"cfg\"][\"shown_domain\"]\n",
     "    else:\n",
     "        dom = data[\"domain\"]\n",
-    "    plot_particles_age(data[\"pset\"], dom, field=field,\n",
+    "    draw_particles_age(data[\"pset\"], dom, field=field,\n",
     "                       savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad)+\".png\",\n",
     "                       vmax=days, field_vmax=max_v, part_size=4)\n",
     "        \n",
