--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -30,8 +30,7 @@
     "import xarray as xr\n",
     "\n",
     "import utils\n",
-    "from parcels_utils import xr_dataset_to_fieldset\n",
-    "from plot_utils import get_carree_axis, plot_particles"
+    "from parcels_utils import xr_dataset_to_fieldset"
    ]
   },
   {
